syntax = "proto3";

package mamey.crypto_exchange;

// Crypto exchange service for MameyNode blockchain
service CryptoExchangeService {
    // Exchange operations
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
    rpc GetOrderBook(GetOrderBookRequest) returns (GetOrderBookResponse);
    
    // Trading pair operations
    rpc CreateTradingPair(CreateTradingPairRequest) returns (CreateTradingPairResponse);
    rpc GetTradingPair(GetTradingPairRequest) returns (GetTradingPairResponse);
    rpc ListTradingPairs(ListTradingPairsRequest) returns (ListTradingPairsResponse);
    
    // Custody operations
    rpc CreateCustodyAccount(CreateCustodyAccountRequest) returns (CreateCustodyAccountResponse);
    rpc GetCustodyAccount(GetCustodyAccountRequest) returns (GetCustodyAccountResponse);
    rpc DepositToCustody(DepositToCustodyRequest) returns (DepositToCustodyResponse);
    rpc WithdrawFromCustody(WithdrawFromCustodyRequest) returns (WithdrawFromCustodyResponse);
    
    // Wallet operations
    rpc CreateWallet(CreateWalletRequest) returns (CreateWalletResponse);
    rpc GetWallet(GetWalletRequest) returns (GetWalletResponse);
    rpc GetWalletBalance(GetWalletBalanceRequest) returns (GetWalletBalanceResponse);
    rpc ListWallets(ListWalletsRequest) returns (ListWalletsResponse);
    
    // Staking operations
    rpc Stake(StakeRequest) returns (StakeResponse);
    rpc Unstake(UnstakeRequest) returns (UnstakeResponse);
    rpc GetStakingInfo(GetStakingInfoRequest) returns (GetStakingInfoResponse);
    
    // Stablecoin routing
    rpc RouteStablecoin(RouteStablecoinRequest) returns (RouteStablecoinResponse);
    rpc GetStablecoinRoutes(GetStablecoinRoutesRequest) returns (GetStablecoinRoutesResponse);
}

// Create order request
message CreateOrderRequest {
    string trading_pair = 1;
    string order_type = 2;  // "buy", "sell"
    string price = 3;
    string quantity = 4;
    string account_id = 5;
}

// Create order response
message CreateOrderResponse {
    string order_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Get order request
message GetOrderRequest {
    string order_id = 1;
}

// Get order response
message GetOrderResponse {
    OrderInfo order = 1;
    bool success = 2;
    string error_message = 3;
}

// Cancel order request
message CancelOrderRequest {
    string order_id = 1;
}

// Cancel order response
message CancelOrderResponse {
    bool success = 1;
    string error_message = 2;
}

// List orders request
message ListOrdersRequest {
    string account_id = 1;
    string trading_pair = 2;
    string status = 3;  // "open", "filled", "cancelled"
    uint32 limit = 4;
    uint32 offset = 5;
}

// List orders response
message ListOrdersResponse {
    repeated OrderInfo orders = 1;
    uint32 total_count = 2;
    bool success = 3;
    string error_message = 4;
}

// Get order book request
message GetOrderBookRequest {
    string trading_pair = 1;
    uint32 depth = 2;
}

// Get order book response
message GetOrderBookResponse {
    repeated OrderBookEntry bids = 1;
    repeated OrderBookEntry asks = 2;
    bool success = 3;
    string error_message = 4;
}

// Create trading pair request
message CreateTradingPairRequest {
    string base_currency = 1;
    string quote_currency = 2;
    string min_trade_amount = 3;
    string tick_size = 4;
}

// Create trading pair response
message CreateTradingPairResponse {
    string trading_pair = 1;
    bool success = 2;
    string error_message = 3;
}

// Get trading pair request
message GetTradingPairRequest {
    string trading_pair = 1;
}

// Get trading pair response
message GetTradingPairResponse {
    TradingPairInfo pair = 1;
    bool success = 2;
    string error_message = 3;
}

// List trading pairs request
message ListTradingPairsRequest {
    uint32 limit = 1;
    uint32 offset = 2;
}

// List trading pairs response
message ListTradingPairsResponse {
    repeated TradingPairInfo pairs = 1;
    uint32 total_count = 2;
    bool success = 3;
    string error_message = 4;
}

// Create custody account request
message CreateCustodyAccountRequest {
    string account_id = 1;
    string currency = 2;
}

// Create custody account response
message CreateCustodyAccountResponse {
    string custody_account_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Get custody account request
message GetCustodyAccountRequest {
    string custody_account_id = 1;
}

// Get custody account response
message GetCustodyAccountResponse {
    CustodyAccountInfo account = 1;
    bool success = 2;
    string error_message = 3;
}

// Deposit to custody request
message DepositToCustodyRequest {
    string custody_account_id = 1;
    string amount = 2;
    string currency = 3;
}

// Deposit to custody response
message DepositToCustodyResponse {
    string transaction_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Withdraw from custody request
message WithdrawFromCustodyRequest {
    string custody_account_id = 1;
    string amount = 2;
    string currency = 3;
    string destination = 4;
}

// Withdraw from custody response
message WithdrawFromCustodyResponse {
    string transaction_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Create wallet request
message CreateWalletRequest {
    string account_id = 1;
    repeated string currencies = 2;
}

// Create wallet response
message CreateWalletResponse {
    string wallet_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Get wallet request
message GetWalletRequest {
    string wallet_id = 1;
}

// Get wallet response
message GetWalletResponse {
    WalletInfo wallet = 1;
    bool success = 2;
    string error_message = 3;
}

// Get wallet balance request
message GetWalletBalanceRequest {
    string wallet_id = 1;
    string currency = 2;
}

// Get wallet balance response
message GetWalletBalanceResponse {
    string balance = 1;
    string currency = 2;
    bool success = 3;
    string error_message = 4;
}

// List wallets request
message ListWalletsRequest {
    string account_id = 1;
    uint32 limit = 2;
    uint32 offset = 3;
}

// List wallets response
message ListWalletsResponse {
    repeated WalletInfo wallets = 1;
    uint32 total_count = 2;
    bool success = 3;
    string error_message = 4;
}

// Stake request
message StakeRequest {
    string account_id = 1;
    string amount = 2;
    string currency = 3;
}

// Stake response
message StakeResponse {
    string staking_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Unstake request
message UnstakeRequest {
    string staking_id = 1;
    string amount = 2;
}

// Unstake response
message UnstakeResponse {
    string transaction_id = 1;
    bool success = 2;
    string error_message = 3;
}

// Get staking info request
message GetStakingInfoRequest {
    string account_id = 1;
}

// Get staking info response
message GetStakingInfoResponse {
    StakingInfo staking = 1;
    bool success = 2;
    string error_message = 3;
}

// Route stablecoin request
message RouteStablecoinRequest {
    string from_currency = 1;
    string to_currency = 2;
    string amount = 3;
    string account_id = 4;
}

// Route stablecoin response
message RouteStablecoinResponse {
    string route_id = 1;
    string exchange_rate = 2;
    string final_amount = 3;
    bool success = 4;
    string error_message = 5;
}

// Get stablecoin routes request
message GetStablecoinRoutesRequest {
    string from_currency = 1;
    string to_currency = 2;
}

// Get stablecoin routes response
message GetStablecoinRoutesResponse {
    repeated StablecoinRoute routes = 1;
    bool success = 2;
    string error_message = 3;
}

// Order info
message OrderInfo {
    string order_id = 1;
    string trading_pair = 2;
    string order_type = 3;
    string price = 4;
    string quantity = 5;
    string filled_quantity = 6;
    OrderStatus status = 7;
    uint64 created_at = 8;
    uint64 filled_at = 9;
}

// Order book entry
message OrderBookEntry {
    string price = 1;
    string quantity = 2;
}

// Trading pair info
message TradingPairInfo {
    string trading_pair = 1;
    string base_currency = 2;
    string quote_currency = 3;
    string last_price = 4;
    string volume_24h = 5;
    string min_trade_amount = 6;
    string tick_size = 7;
}

// Custody account info
message CustodyAccountInfo {
    string custody_account_id = 1;
    string account_id = 2;
    string currency = 3;
    string balance = 4;
    CustodyAccountType type = 5;
    uint64 created_at = 6;
}

// Wallet info
message WalletInfo {
    string wallet_id = 1;
    string account_id = 2;
    map<string, string> balances = 3;
    uint64 created_at = 4;
}

// Staking info
message StakingInfo {
    string account_id = 1;
    string total_staked = 2;
    string currency = 3;
    string rewards_earned = 4;
    uint64 staking_start_date = 5;
}

// Stablecoin route
message StablecoinRoute {
    string from_currency = 1;
    string to_currency = 2;
    string exchange_rate = 3;
    string fee = 4;
}

// Order status enum
enum OrderStatus {
    OPEN = 0;
    PARTIALLY_FILLED = 1;
    FILLED = 2;
    CANCELLED = 3;
}

// Custody account type enum
enum CustodyAccountType {
    HOT = 0;
    COLD = 1;
}




