syntax = "proto3";

option csharp_namespace = "Pupitre.GLEs.Api.Protos";

package Pupitre.GLEs;

// gRPC service for GLE operations
service GLEService {
    // Get a single GLE by ID
    rpc GetGLE (GetGLERequest) returns (GLEResponse) {};
    
    // List all GLEs with pagination
    rpc ListGLEs (ListGLEsRequest) returns (ListGLEsResponse) {};
    
    // Stream GLE updates
    rpc StreamGLEUpdates (StreamGLEUpdatesRequest) returns (stream GLEResponse) {};
}

message GetGLERequest {
    string id = 1;
}

message ListGLEsRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ListGLEsResponse {
    repeated GLEResponse items = 1;
    int32 total_count = 2;
    int32 page = 3;
    int32 page_size = 4;
}

message GLEResponse {
    string id = 1;
    string name = 2;
    int64 created_at = 3;
    int64 updated_at = 4;
}

message StreamGLEUpdatesRequest {
    string filter = 1;
}
